--- a/_includes/head.html
+++ b/_includes/head.html
@@ -14,8 +14,6 @@
 
     <meta http-equiv="Content-type" content="text/html;charset=UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <!-- Bootstrap -->
-    <link href="/assets/stylesheets/bootstrap.min.css" rel="stylesheet" media="screen">
 
     <script type="text/javascript" src="//use.typekit.net/raj7qig.js"></script>
     <script type="text/javascript">
@@ -34,26 +32,22 @@
       <script type="text/javascript"></script>t src="../../assets/assets/javascripts/respond.min.js"></script>
       <![endif]-->
 
-    <link href="/assets/stylesheets/mailtape.css" rel="stylesheet" media="screen">
-    <link href="/assets/stylesheets/archive.css" rel="stylesheet" media="screen">
 
-
-    <!-- Page player core CSS -->
-    <link rel="stylesheet" type="text/css" href="/assets/stylesheets/page-player.css" />
-
-
-    <!-- soundManager.useFlashBlock: related CSS -->
-    <link rel="stylesheet" type="text/css" href="/assets/stylesheets/flashblock.css" />
-
+    {% css_asset_tag global %}
+        - /_assets/stylesheets/bootstrap.min.css
+        - /_assets/stylesheets/mailtape.css.less
+        - /_assets/stylesheets/archive.css.less
+        - /_assets/stylesheets/page-player.css
+        - /_assets/stylesheets/flashblock.css
+    {% endcss_asset_tag %}
 
     <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
     <script src="//ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js"></script>
 
-    <!-- MailChimp aJax script -->
-    <script src="/assets/javascripts/jquery.ajaxchimp.js"></script>
-
-    <!-- soundManager API -->
-     <script src="/assets/javascripts/soundmanager2-jsmin.js"></script>
+    {% javascript_asset_tag global %}
+        - /_assets/javascripts/jquery.ajaxchimp.js
+        - /_assets/javascripts/soundmanager2-jsmin.js
+    {% endjavascript_asset_tag %}
 
     <script>
     soundManager.setup({
@@ -80,26 +74,20 @@
     }
     </script>
 
-    <!-- dynamically-resized background image to any page or block level element. -->
-    <script type="text/javascript" src="/assets/javascripts/jquery.anystretch.min.js"></script>
 
+    {% javascript_asset_tag global %}
+        # dynamically-resized background image to any page or block level element.
+        - /_assets/javascripts/jquery.anystretch.min.js
+        - /_assets/javascripts/bootstrap.min.js
+        - /_assets/javascripts/jquery.fittext.js
+        - /_assets/javascripts/jquery.fittext.v.js
+        - /_assets/javascripts/flowtype.js
+        # Pour écrire Musicolor en couleur
+        - /_assets/javascripts/jquery.lettering-0.6.1.min.js
+        - /_assets/javascripts/mailtapeT.js
+        - /_assets/javascripts/archive.js
+    {% endjavascript_asset_tag %}
 
-    <!-- Include all compiled plugins (below), or include individual files as needed -->
-   <script src="/assets/javascripts/bootstrap.min.js"></script>
-
-   <script src="/assets/javascripts/jquery.fittext.js"></script>
-
-   <script src="/assets/javascripts/jquery.fittext.v.js"></script>
-
-   <script src="/assets/javascripts/flowtype.js"></script>
-
-    <!-- Pour écrire Musicolor en couleur -->
-   <script src="/assets/javascripts/jquery.lettering-0.6.1.min.js"></script>
-
-   <script src="/assets/javascripts/mailtapeT.js"></script>
-    <script src="/assets/javascripts/archive.js"></script>
-
-   <script src="/assets/javascripts/archive.js"></script>
 
     <script type="text/javascript">
     var _gaq = _gaq || [];
@@ -117,8 +105,10 @@
     })();
     </script>
 
-    <!-- Page player main script -->
-    <script src="/assets/javascripts/page-player.js"></script>
+    {% javascript_asset_tag global %}
+        # Page player main script
+        - /_assets/javascripts/page-player.js
+    {% endjavascript_asset_tag %}
 
     <!-- déclaration des url des tracks de la playlist -->
     <script>
